--- a/client/src/Styles/Todo.css
+++ b/client/src/Styles/Todo.css
@@ -36,7 +36,7 @@ h1 {
   border-radius: 10px;
   color: #e1dbed;
   padding: 1%;
-  width: fit-content;
+/*   width: fit-content; */
   margin-left: auto;
   margin-right: auto;
   margin-top: 3%;
